--- a/Project.toml
+++ b/Project.toml
@@ -4,10 +4,16 @@ authors = ["Mariia Myshkina", "Matthias König"]
 version = "0.1.0"
 
 [deps]
+BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 
 [compat]
+BenchmarkTools = "1.5.0"
+CSV = "0.10.15"
+DataFrames = "1.7.0"
 OrdinaryDiffEq = "6.90.1"
 Plots = "1.40.9"
 julia = ">=1.5"
