--- a/Project.toml
+++ b/Project.toml
@@ -6,16 +6,20 @@ version = "0.1.0"
 [deps]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+Catalyst = "479239e8-5488-4da2-87a7-35f2df7eef83"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
-SBMLToolkit = "86080e66-c8ac-44c2-a1a0-9adaadfe4a4e"
+SBMLImporter = "210efffb-c3c8-456d-a807-6f55560b12fe"
 
 [compat]
 BenchmarkTools = "1.5.0"
 CSV = "0.10.15"
+Catalyst = "14.4.1"
 DataFrames = "1.7.0"
+ModelingToolkit = "9.55.0"
 OrdinaryDiffEq = "6.90.1"
 Plots = "1.40.9"
-SBMLToolkit = "0.1.29"
-julia = ">=1.5"
+SBMLImporter = "2.8.0"
+julia = ">=1.11"
