--- a/Project.toml
+++ b/Project.toml
@@ -4,13 +4,17 @@ authors = ["Mariia Myshkina", "Matthias König"]
 version = "0.1.0"
 
 [deps]
+AlgebraOfGraphics = "cbdf2221-f076-402e-a563-3d30da359d67"
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 Catalyst = "479239e8-5488-4da2-87a7-35f2df7eef83"
+Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
+DataAPI = "9a962f9c-6df0-11e9-0e5d-c546b8b5ee8a"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 Glob = "c27321d9-0574-5035-807b-f59d2c89b15c"
+InMemoryDatasets = "5c01b14b-ab03-46ff-b164-14c663efdd9f"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 ParameterizedFunctions = "65888b18-ceab-5e60-b2b9-181511a3b968"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
@@ -18,13 +22,17 @@ Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 
 [compat]
+AlgebraOfGraphics = "0.8.13"
 BenchmarkTools = "1.5.0"
 CSV = "0.10.15"
 CairoMakie = "0.12.17"
 Catalyst = "14.4.1"
+Combinatorics = "1.0.2"
+DataAPI = "1.16.0"
 DataFrames = "1.7.0"
 GLMakie = "0.10.17"
 Glob = "1.3.1"
+InMemoryDatasets = "0.7.21"
 OrdinaryDiffEq = "6.90.1"
 ParameterizedFunctions = "5.17.0"
 Parameters = "0.12.3"
