--- a/Project.toml
+++ b/Project.toml
@@ -11,7 +11,11 @@ CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 Catalyst = "479239e8-5488-4da2-87a7-35f2df7eef83"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataFramesMeta = "1313f7d8-7da2-5740-9ea0-a2ca25f37964"
+EzXML = "8f5d6c58-4d21-5cfd-889c-e3ad7ee6a615"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
+GraphDataFrameBridge = "3c71623a-a715-5176-9801-629b201a4880"
+Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
+MetaGraphs = "626554b9-1ddb-594c-aa3c-2596fe9399a5"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 ParameterizedFunctions = "65888b18-ceab-5e60-b2b9-181511a3b968"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
@@ -28,7 +32,11 @@ CairoMakie = "0.12.17"
 Catalyst = "14.4.1"
 DataFrames = "1.7.0"
 DataFramesMeta = "0.15.4"
+EzXML = "1.2.0"
 GLMakie = "0.10.17"
+GraphDataFrameBridge = "0.3.2"
+Graphs = "1.12.0"
+MetaGraphs = "0.7.2"
 OrdinaryDiffEq = "6.90.1"
 ParameterizedFunctions = "5.17.0"
 Parameters = "0.12.3"
