--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ version = "0.1.0"
 
 [deps]
 AlgebraOfGraphics = "cbdf2221-f076-402e-a563-3d30da359d67"
+AllocCheck = "9b6a8646-10ed-4001-bbdc-1d2f46dfbb1a"
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
@@ -17,6 +18,7 @@ GraphDataFrameBridge = "3c71623a-a715-5176-9801-629b201a4880"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 MetaGraphs = "626554b9-1ddb-594c-aa3c-2596fe9399a5"
 ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
+MuladdMacro = "46d2c3a1-f734-5fdb-9937-b9b9aeba4221"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 ParameterizedFunctions = "65888b18-ceab-5e60-b2b9-181511a3b968"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
@@ -27,6 +29,7 @@ TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 
 [compat]
 AlgebraOfGraphics = "0.8.13"
+AllocCheck = "0.2.0"
 BenchmarkTools = "1.5.0"
 CSV = "0.10.15"
 CairoMakie = "0.12.17"
@@ -39,6 +42,7 @@ GraphDataFrameBridge = "0.3.2"
 Graphs = "1.12.0"
 MetaGraphs = "0.7.2"
 ModelingToolkit = "9.59.0"
+MuladdMacro = "0.2.4"
 OrdinaryDiffEq = "6.90.1"
 ParameterizedFunctions = "5.17.0"
 Parameters = "0.12.3"
