--- a/Project.toml
+++ b/Project.toml
@@ -23,6 +23,7 @@ OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 ParameterizedFunctions = "65888b18-ceab-5e60-b2b9-181511a3b968"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
@@ -47,6 +48,7 @@ OrdinaryDiffEq = "6.90.1"
 ParameterizedFunctions = "5.17.0"
 Parameters = "0.12.3"
 Revise = "3.6.4"
+SparseArrays = "1.11.0"
 Statistics = "1.11.1"
 Tables = "1.12.0"
 TimerOutputs = "0.5.26"
