--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 Catalyst = "479239e8-5488-4da2-87a7-35f2df7eef83"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataFramesMeta = "1313f7d8-7da2-5740-9ea0-a2ca25f37964"
+DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 EzXML = "8f5d6c58-4d21-5cfd-889c-e3ad7ee6a615"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 GraphDataFrameBridge = "3c71623a-a715-5176-9801-629b201a4880"
@@ -26,6 +27,7 @@ Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
+TidierData = "fe2206b3-d496-4ee9-a338-6a095c4ece80"
 TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 
 [compat]
@@ -37,6 +39,7 @@ CairoMakie = "0.12.17"
 Catalyst = "14.4.1"
 DataFrames = "1.7.0"
 DataFramesMeta = "0.15.4"
+DelimitedFiles = "1.9.1"
 EzXML = "1.2.0"
 GLMakie = "0.10.17"
 GraphDataFrameBridge = "0.3.2"
@@ -51,5 +54,6 @@ Revise = "3.6.4"
 SparseArrays = "1.11.0"
 Statistics = "1.11.1"
 Tables = "1.12.0"
+TidierData = "0.16.5"
 TimerOutputs = "0.5.26"
 julia = ">=1.5"
