pretty printout of equations in julia model

--- a/Project.toml
+++ b/Project.toml
@@ -17,6 +17,7 @@ GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 GraphDataFrameBridge = "3c71623a-a715-5176-9801-629b201a4880"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
+KahanSummation = "8e2b3108-d4c1-50be-a7a2-16352aec75c3"
 MetaGraphs = "626554b9-1ddb-594c-aa3c-2596fe9399a5"
 ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
@@ -41,6 +42,7 @@ GLMakie = "0.10.17"
 GraphDataFrameBridge = "0.3.2"
 Graphs = "1.12.0"
 JLD2 = "0.4.53"
+KahanSummation = "0.3.1"
 MetaGraphs = "0.7.2"
 ModelingToolkit = "9.59.0"
 OrdinaryDiffEq = "6.90.1"
