--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ Catalyst = "479239e8-5488-4da2-87a7-35f2df7eef83"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataFramesMeta = "1313f7d8-7da2-5740-9ea0-a2ca25f37964"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
+DiffEqCallbacks = "459566f4-90b8-5000-8ac3-15dfb0a30def"
 EzXML = "8f5d6c58-4d21-5cfd-889c-e3ad7ee6a615"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 GraphDataFrameBridge = "3c71623a-a715-5176-9801-629b201a4880"
@@ -23,6 +24,7 @@ ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 ParameterizedFunctions = "65888b18-ceab-5e60-b2b9-181511a3b968"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
@@ -37,6 +39,7 @@ Catalyst = "14.4.1"
 DataFrames = "1.7.0"
 DataFramesMeta = "0.15.4"
 DelimitedFiles = "1.9.1"
+DiffEqCallbacks = "4.2.2"
 EzXML = "1.2.0"
 GLMakie = "0.10.17"
 GraphDataFrameBridge = "0.3.2"
@@ -48,6 +51,7 @@ ModelingToolkit = "9.59.0"
 OrdinaryDiffEq = "6.90.1"
 ParameterizedFunctions = "5.17.0"
 Parameters = "0.12.3"
+Plots = "1.40.9"
 Revise = "3.6.4"
 Statistics = "1.11.1"
 Tables = "1.12.0"
