--- a/Project.toml
+++ b/Project.toml
@@ -19,6 +19,7 @@ GraphDataFrameBridge = "3c71623a-a715-5176-9801-629b201a4880"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 KahanSummation = "8e2b3108-d4c1-50be-a7a2-16352aec75c3"
+LinearSolve = "7ed4a6bd-45f5-4d41-b270-4a48e9bafcae"
 MetaGraphs = "626554b9-1ddb-594c-aa3c-2596fe9399a5"
 ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
@@ -46,6 +47,7 @@ GraphDataFrameBridge = "0.3.2"
 Graphs = "1.12.0"
 JLD2 = "0.4.53"
 KahanSummation = "0.3.1"
+LinearSolve = "2.38.0"
 MetaGraphs = "0.7.2"
 ModelingToolkit = "9.59.0"
 OrdinaryDiffEq = "6.90.1"
