--- a/Project.toml
+++ b/Project.toml
@@ -25,7 +25,11 @@ OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 ParameterizedFunctions = "65888b18-ceab-5e60-b2b9-181511a3b968"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+ProfileCanvas = "efd6af41-a80b-495e-886c-e51b0c7d77a3"
+ProfileSVG = "132c30aa-f267-4189-9183-c8a63c7e05e6"
+ProfileView = "c46f51b8-102a-5cf2-8d2c-8597cb0e0da7"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+StatProfilerHTML = "a8a75453-ed82-57c9-9e16-4cd1196ecbf5"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
@@ -52,7 +56,11 @@ OrdinaryDiffEq = "6.90.1"
 ParameterizedFunctions = "5.17.0"
 Parameters = "0.12.3"
 Plots = "1.40.9"
+ProfileCanvas = "0.1.6"
+ProfileSVG = "0.2.2"
+ProfileView = "1.9.0"
 Revise = "3.6.4"
+StatProfilerHTML = "1.6.0"
 Statistics = "1.11.1"
 Tables = "1.12.0"
 TimerOutputs = "0.5.26"
