jld2 changed to arrow, formated code

--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ version = "0.1.0"
 
 [deps]
 AlgebraOfGraphics = "cbdf2221-f076-402e-a563-3d30da359d67"
+Arrow = "69666777-d1a9-59fb-9406-91d4454c9d45"
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
@@ -18,6 +19,7 @@ GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 GraphDataFrameBridge = "3c71623a-a715-5176-9801-629b201a4880"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
+JuliaFormatter = "98e50ef6-434e-11e9-1051-2b60c6c9e899"
 KahanSummation = "8e2b3108-d4c1-50be-a7a2-16352aec75c3"
 MetaGraphs = "626554b9-1ddb-594c-aa3c-2596fe9399a5"
 ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
@@ -36,6 +38,7 @@ TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 
 [compat]
 AlgebraOfGraphics = "0.8.13"
+Arrow = "2.8.0"
 BenchmarkTools = "1.5.0"
 CSV = "0.10.15"
 CairoMakie = "0.12.17"
@@ -49,6 +52,7 @@ GLMakie = "0.10.17"
 GraphDataFrameBridge = "0.3.2"
 Graphs = "1.12.0"
 JLD2 = "0.4.53"
+JuliaFormatter = "1.0.62"
 KahanSummation = "0.3.1"
 MetaGraphs = "0.7.2"
 ModelingToolkit = "9.59.0"
