--- a/Project.toml
+++ b/Project.toml
@@ -30,10 +30,12 @@ Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 ProfileCanvas = "efd6af41-a80b-495e-886c-e51b0c7d77a3"
 ProfileSVG = "132c30aa-f267-4189-9183-c8a63c7e05e6"
 ProfileView = "c46f51b8-102a-5cf2-8d2c-8597cb0e0da7"
+ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 StatProfilerHTML = "a8a75453-ed82-57c9-9e16-4cd1196ecbf5"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
+Term = "22787eb5-b846-44ae-b979-8e399b8463ab"
 TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 
 [compat]
@@ -63,9 +65,11 @@ Plots = "1.40.9"
 ProfileCanvas = "0.1.6"
 ProfileSVG = "0.2.2"
 ProfileView = "1.9.0"
+ProgressMeter = "1.10.2"
 Revise = "3.6.4"
 StatProfilerHTML = "1.6.0"
 Statistics = "1.11.1"
 Tables = "1.12.0"
+Term = "2.0.7"
 TimerOutputs = "0.5.26"
 julia = ">=1.5"
