--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ vascular_trees.jl.code-workspace
 SyntheticVascularTrees.jl
 results
 Manifest.toml
+plot_1.svg
+Project.toml
+Manifest.toml
+Manifest.toml
+Manifest.toml
