--- a/Project.toml
+++ b/Project.toml
@@ -34,6 +34,7 @@ ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 StatProfilerHTML = "a8a75453-ed82-57c9-9e16-4cd1196ecbf5"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+Sundials = "c3572dad-4567-51f8-b174-8c6c989267f4"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 Term = "22787eb5-b846-44ae-b979-8e399b8463ab"
 TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
@@ -69,6 +70,7 @@ ProgressMeter = "1.10.2"
 Revise = "3.6.4"
 StatProfilerHTML = "1.6.0"
 Statistics = "1.11.1"
+Sundials = "4.26.1"
 Tables = "1.12.0"
 Term = "2.0.7"
 TimerOutputs = "0.5.26"
