--- a/Project.toml
+++ b/Project.toml
@@ -13,7 +13,9 @@ Catalyst = "479239e8-5488-4da2-87a7-35f2df7eef83"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataFramesMeta = "1313f7d8-7da2-5740-9ea0-a2ca25f37964"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
+Dictionaries = "85a47980-9c8c-11e8-2b9f-f7ca1fa99fb4"
 DiffEqCallbacks = "459566f4-90b8-5000-8ac3-15dfb0a30def"
+DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 EzXML = "8f5d6c58-4d21-5cfd-889c-e3ad7ee6a615"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 GraphDataFrameBridge = "3c71623a-a715-5176-9801-629b201a4880"
@@ -49,7 +51,9 @@ Catalyst = "14.4.1"
 DataFrames = "1.7.0"
 DataFramesMeta = "0.15.4"
 DelimitedFiles = "1.9.1"
+Dictionaries = "0.4.4"
 DiffEqCallbacks = "4.2.2"
+DifferentialEquations = "7.16.0"
 EzXML = "1.2.0"
 GLMakie = "0.10.17"
 GraphDataFrameBridge = "0.3.2"
